karaage_asserts/tests/codes/fail.stderr
error[E0277]: the trait bound `Empty: Clone` is not satisfied
 --> tests/codes/fail.rs:6:18
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |                  ^^^^^ the trait `Clone` is not implemented for `Empty`
  |
note: required by a bound in `assert_impl_clone`
 --> tests/codes/fail.rs:6:24
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |     -------------------^^^^^--------
  |     |                  |
  |     |                  required by this bound in `assert_impl_clone`
  |     required by a bound in this

error[E0277]: the trait bound `Empty: Copy` is not satisfied
 --> tests/codes/fail.rs:6:18
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |                  ^^^^^ the trait `Copy` is not implemented for `Empty`
  |
note: required by a bound in `assert_impl_copy`
 --> tests/codes/fail.rs:6:31
  |
6 |     assert_impl!(Empty<Clone, Copy>);
  |     --------------------------^^^^--
  |     |                         |
  |     |                         required by this bound in `assert_impl_copy`
  |     required by a bound in this
